--- a/css/questions.css
+++ b/css/questions.css
@@ -1,4 +1,5 @@
 @import url(../css/base.css);
+@import url(../css/breadcrumb.css);
 
 nav > ul > li:nth-child(4) > a{
     color:#F5A651;
@@ -7,6 +8,14 @@ nav > ul > li:nth-child(4) > a{
 nav > ul > li:nth-child(4) > a:hover{
     color: white;
 }
+
+.wrapper{
+    /* background-image: url(../img/backgroundimage.png);
+    background-size: cover;
+    background-position: center center; */
+    /* border: 1px solid black; */
+}
+
 /* ----------------------------- */
 
 .que{
@@ -30,6 +39,7 @@ nav > ul > li:nth-child(4) > a:hover{
     text-align: center;
     margin-bottom: 40px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, .3);
+    background-color: white;
 }
 
 .qa p{
@@ -41,12 +51,13 @@ nav > ul > li:nth-child(4) > a:hover{
     width: 300px;
     height: 30px;
     line-height: 30px;
-    text-align: center;
+    text-align: left;
     border-bottom: 1px solid #e5e5e5;
     margin: 0 auto;
     margin-bottom: 10px;
     /* border: 1px solid black; */
     position: relative;
+    padding-left: 30px;
 }
 
 .qa a:hover{
@@ -73,7 +84,7 @@ nav > ul > li:nth-child(4) > a:hover{
     height: 2px;
     background-color: #333;
     top: 13px;
-    left: 100px;
+    left: 12px;
     margin: auto;
 }
 
@@ -84,7 +95,7 @@ nav > ul > li:nth-child(4) > a:hover{
     height: 10px;
     background-color: #333;
     top: 9px;
-    left: 104px;
+    left: 16px;
     margin: auto;
 }
 
@@ -95,7 +106,7 @@ nav > ul > li:nth-child(4) > a:hover{
     height: 2px;
     background-color: #333;
     top: 13px;
-    left: 100px;
+    left: 12px;
     margin: auto;
 }
 
@@ -106,7 +117,7 @@ nav > ul > li:nth-child(4) > a:hover{
     height: 10px;
     background-color: #333;
     top: 9px;
-    left: 104px;
+    left: 16px;
     margin: auto;
 }
 
@@ -117,7 +128,7 @@ nav > ul > li:nth-child(4) > a:hover{
     height: 2px;
     background-color: #333;
     top: 13px;
-    left: 46px;
+    left: 12px;
     margin: auto;
 }
 
@@ -128,7 +139,7 @@ nav > ul > li:nth-child(4) > a:hover{
     height: 10px;
     background-color: #333;
     top: 9px;
-    left: 50px;
+    left: 16px;
     margin: auto;
 }
 
@@ -153,4 +164,57 @@ nav > ul > li:nth-child(4) > a:hover{
     width: 380px;
     margin: 0 auto;
     text-align: left;
+}
+
+/* ------------- Media Query ------------------ */
+
+/* ----------- 小於576px ------------- */
+@media screen and (max-width: 575.98px){
+    div.wrapper{
+        width: 100%;
+        margin: 0 auto;
+    }
+    .qa{
+        width: 100%;
+    }
+    .qa p{
+        /* border: 1px solid black; */
+        width: 100%;
+    } 
+}
+
+/* ---------- 介於576px ~ 768px -------------- */
+@media screen and (min-width: 576px) and (max-width: 767.98px){
+    div.wrapper{
+        width: 540px;
+        margin: 0 auto; 
+    }
+    
+}
+
+/* ----------- 介於768px ~ 992px ------------- */
+@media screen and (min-width: 768px) and (max-width: 991.98px){
+    div.wrapper{
+        width: 720px;
+        margin: 0 auto;
+    }
+    
+}
+
+/* ------------------- 介於992xp ~ 1200px --------------------------- */
+@media screen and (min-width: 992px) and (max-width: 1199.98px){
+    div.wrapper{
+        width: 960px;
+        margin: 0 auto;
+    }
+       
+}
+
+/* -------------------- 介於1200px ~ 1400px ----------------------------- */
+@media screen and (min-width: 1200px) and (max-width: 1399.98px){
+    div.wrapper{
+        width: 1140px;
+        margin: 0 auto;
+    }
+    
 }
