--- a/css/contactus.css
+++ b/css/contactus.css
@@ -158,6 +158,13 @@ ul p{
     margin-left: 25px;
 }
 
+ul > p{
+    width: 100%;
+    margin: 0;
+    margin-top: 10px;
+    padding-left: 20px;
+}
+
 #file_input{
     display: block;
     margin-bottom: 10px;
@@ -182,6 +189,7 @@ ul p{
     margin-bottom: 20px;
     -webkit-appearance: none;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 button#choose_file{
