--- a/css/index.css
+++ b/css/index.css
@@ -155,6 +155,41 @@ span:nth-child(10) {
     100%{ transform: translateY(0px); opacity: 1;}
 } */
 
+.dnc{
+    margin-top: 10px;
+    font-size: 40px;
+    /* font-weight: bolder; */
+    line-height: 1;
+    letter-spacing: -1px;
+    background-image: linear-gradient(#F5A651, #F6EFE7); 
+    background-size: cover;
+    background-position: center;
+    -webkit-background-clip: text;
+    color: transparent;
+    position: relative;
+}
+
+.dnc::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 3px;
+    box-shadow: 0 0 10px 10px White;
+    background-color: White;
+    transform: rotate(-20deg) scale(1.5);
+    animation: shining 2s infinite linear;
+}
+@keyframes shining{
+    0%, 50% {
+      left: 85%
+    }
+    100% {
+      left: 15%;
+    }
+  }
+
 .txt1 p{
     margin-bottom: 20px;
     /* animation: bbb 1s 3.3s forwards;
@@ -229,6 +264,7 @@ span:nth-child(10) {
     /* border: 1px solid black; */
     text-align: center;
     margin-bottom: 20px;
+    /* font-size: 24px; */
 }
 
 
@@ -247,7 +283,7 @@ span:nth-child(10) {
     height: 260px;
     /* display: flex; */
     /* text-align: center; */
-    transition: all .5s;
+    transition: all 1s;
     /* border: 1px solid #e5e5e5; */
     border-radius: 5px;
     /* overflow: hidden; */
@@ -260,6 +296,7 @@ span:nth-child(10) {
     /* margin-right: 130px; */
     
     /* padding: 5px; */
+    display: block;
 }
 
 .content li:first-child:hover{
@@ -267,12 +304,12 @@ span:nth-child(10) {
 }
 
 .content li:nth-child(2):hover{
-    transform: scale(1.05);
+    /* transform: scale(1.05); */
 }
 
 .content li:last-child:hover{
-    transform: scale(1.05);
-    cursor: pointer;
+    /* transform: scale(1.05); */
+    /* cursor: pointer; */
 }
 
 .content img{
@@ -425,7 +462,7 @@ span:nth-child(10) {
     background-image: url(../img/loadbg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    /* background-position: center center; */
     color: #fff;
     z-index: 100;
 }
@@ -473,6 +510,7 @@ span:nth-child(10) {
 
 #watch h2{
     /* color: #fff; */
+    font-size: 24px;
 }
 
 div.row{
@@ -513,7 +551,7 @@ div.row{
     border: none;
     background-color: #F5A651;
     color: white;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     cursor: pointer;
     animation: aaa 1s linear infinite;
     /* opacity: 0; */
