--- a/css/index.css
+++ b/css/index.css
@@ -545,6 +545,7 @@ div.row{
   }
   
   #watch1 .slotMachineContainer > div img{
+
   }
 
   #watch .btn-group .btn {
@@ -676,16 +677,16 @@ div.btn-group button{
         flex-direction: column;
         /* border: 1px solid black; */
     }
-    div.container ul li:first-child{
+    div.container ul div:first-child{
         margin-bottom: 20px;
         margin: 0 auto;
     }
-    div.container ul li:nth-child(2){
+    div.container ul div:nth-child(2){
         margin: 0 auto;
         margin-bottom: 20px;
         margin-top: 20px;
     }
-    div.container ul li:last-child{
+    div.container ul div:last-child{
         margin: 0 auto;
     }
     .gift{
@@ -725,9 +726,9 @@ div.btn-group button{
         box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(250,203,70,.6);
         margin-top: 20px;
     }
-    .loc .txt3 ul{
+    .txt3 ul{
         /* border: 1px solid black; */
-        width: 55%;
+        width: 65%;
         margin: 0 auto;
     }
     div.small{
@@ -765,7 +766,6 @@ div.btn-group button{
     .banner h1 span{
         font-size: 24px;
     }
-    
 } 
 
 
