--- a/css/contactus.css
+++ b/css/contactus.css
@@ -237,6 +237,8 @@ button#choose_file i{
     form > ul{
         /* width: 100%; */
         margin: 0 auto;
+        width: 95%;
+        margin: 0 auto;
     }
     .submit{
         display: block;
