修改麵包屑顏色

--- a/css/questions.css
+++ b/css/questions.css
@@ -33,7 +33,7 @@ nav > ul > li:nth-child(4) > a:hover{
 
 .qa{
     border: 1px solid #e5e5e5;
-    height: 350px;
+    height: auto;
     width: 500px;
     margin: 0 auto;
     text-align: center;
@@ -82,7 +82,7 @@ nav > ul > li:nth-child(4) > a:hover{
     position: absolute;
     width: 10px;
     height: 2px;
-    background-color: #333;
+    background-color: #F5A651;
     top: 13px;
     left: 12px;
     margin: auto;
@@ -93,7 +93,7 @@ nav > ul > li:nth-child(4) > a:hover{
     position: absolute;
     width: 2px;
     height: 10px;
-    background-color: #333;
+    background-color: #F5A651;
     top: 9px;
     left: 16px;
     margin: auto;
@@ -104,7 +104,7 @@ nav > ul > li:nth-child(4) > a:hover{
     position: absolute;
     width: 10px;
     height: 2px;
-    background-color: #333;
+    background-color: #F5A651;
     top: 13px;
     left: 12px;
     margin: auto;
@@ -115,7 +115,7 @@ nav > ul > li:nth-child(4) > a:hover{
     position: absolute;
     width: 2px;
     height: 10px;
-    background-color: #333;
+    background-color: #F5A651;
     top: 9px;
     left: 16px;
     margin: auto;
@@ -126,7 +126,7 @@ nav > ul > li:nth-child(4) > a:hover{
     position: absolute;
     width: 10px;
     height: 2px;
-    background-color: #333;
+    background-color: #F5A651;
     top: 13px;
     left: 12px;
     margin: auto;
@@ -137,7 +137,7 @@ nav > ul > li:nth-child(4) > a:hover{
     position: absolute;
     width: 2px;
     height: 10px;
-    background-color: #333;
+    background-color: #F5A651;
     top: 9px;
     left: 16px;
     margin: auto;
@@ -146,7 +146,7 @@ nav > ul > li:nth-child(4) > a:hover{
 #hide{
     margin-bottom: 10px;
     /* border: 1px solid black; */
-    width: 380px;
+    width: 300px;
     margin: 0 auto;
     text-align: left;
 }
@@ -154,14 +154,14 @@ nav > ul > li:nth-child(4) > a:hover{
 #hide2{
     margin-bottom: 10px;
     /* border: 1px solid black; */
-    width: 380px;
+    width: 300px;
     margin: 0 auto;
     text-align: left;
 }
 
 #hide3{
     /* border: 1px solid black; */
-    width: 380px;
+    width: 300px;
     margin: 0 auto;
     text-align: left;
 }
