--- a/css/about.css
+++ b/css/about.css
@@ -43,12 +43,12 @@ nav > ul > li:first-child > a:hover{
     /* border: 1px solid black; */
     width: 50%;
     margin: 0 auto;
-    
     text-align: center;
-
     animation: rrr 1.5s 1.8s forwards;
     opacity: 0;
     height: auto;
+    border: 1px solid #F5A651;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(250,203,70,.6);
 }
 
 @keyframes rrr{
@@ -65,11 +65,13 @@ nav > ul > li:first-child > a:hover{
     /* margin-bottom: 10px; */
     margin: 0 auto;
     box-sizing: border-box;
+    margin-top: 20px;
 }
 
 .igr .txt4 p{
     box-sizing: border-box;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .igr .pics3{
@@ -109,7 +111,8 @@ nav > ul > li:first-child > a:hover{
 .fre .txt5{
     width: 50%;
     order: 2;
-
+    border: 1px solid #F5A651;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(250,203,70,.6);
     /* animation: ttt 1.5s 1.8s forwards;
     opacity: 0; */
 }
@@ -127,12 +130,14 @@ nav > ul > li:first-child > a:hover{
     border-bottom: 1px solid black;
     margin: 0 auto;
     /* margin-bottom: 10px; */
+    margin-top: 20px;
 }
 
 .fre .txt5 p{
     text-align: center;
     box-sizing: border-box;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .fre .pics4{
